# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: gendiff-check.yml
gendiff/: __init__.py  gendiff.py  gendiff_args.py  hexlet_training.py  main.py  parser.py
gendiff/scripts/: gendiff.py
gendiff_package/: gendiff_args.py  gendiff_main.py
gendiff_package/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: file4.json  result_1.txt  result_3.txt
