[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "gendiff"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
authors = ["Anton Borisov <antobis1983@gmail.com>"]
repository = "https://github.com/AAB83/python-project-50" 
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
